--- a/asset-management-frontend/src/components/Dashboard.css
+++ b/asset-management-frontend/src/components/Dashboard.css
@@ -61,8 +61,13 @@ nav ul li a:hover {
 }
 
 .admin-icon {
-    width: 30px;
+    font-size: 24px;
     cursor: pointer;
+    color: black;
+}
+
+.admin-icon:hover {
+    color: red;
 }
 
 /* Logout Button */
