--- a/asset-management-frontend/src/components/Login.css
+++ b/asset-management-frontend/src/components/Login.css
@@ -7,6 +7,7 @@
   justify-content: center;
   background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
 }
+
 /* Header Container */
 .header {
   width: 100%;
@@ -14,10 +15,12 @@
   top: 0;
   left: 0;
   display: flex;
-  justify-content: space-between; /* Align items properly */
+  justify-content: space-between;
+  /* Align items properly */
   align-items: center;
   padding: 15px 50px;
-  background: rgba(0, 0, 0, 0.6); /* Dark transparent effect */
+  background: rgba(0, 0, 0, 0.6);
+  /* Dark transparent effect */
   backdrop-filter: blur(10px);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   z-index: 1000;
@@ -33,17 +36,16 @@
 /* Navigation */
 nav {
   display: flex;
-  align-items: center;
+  margin-right: 200px;
 }
 
 /* Navigation List */
 nav ul {
   display: flex;
   margin-left: 1px;
-
   gap: 400px;
   list-style: none;
-  font-weight: 700;
+  font-size: 700;
   padding: 0;
   margin: 0;
 }
@@ -99,7 +101,7 @@ nav ul li a:hover {
 .login-box {
   background: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(10px);
-  padding: 30px;
+  padding: 100px;
   border-radius: 20px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
   text-align: center;
