--- a/asset-management-frontend/src/components/Login.css
+++ b/asset-management-frontend/src/components/Login.css
@@ -18,7 +18,6 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(8px);
   z-index: -1;
 }
 
@@ -45,38 +44,46 @@
   width: 350px;
 }
 
-/* Input Fields */
-.user-role, input {
-  width: 95%;
-  padding: 12px;
-  margin: 10px 0;
+/* Dropdown for Role */
+.user-role {
+  width: 100%;
+  padding: 10px;
   border-radius: 10px;
   border: none;
   background: rgba(255, 255, 255, 0.2);
-  color: white;
   font-size: 16px;
+  margin-bottom: 15px;
   outline: none;
   text-align: center;
-  transition: all 0.3s ease-in-out;
 }
-
+/* Input Fields */
+input {
+  width: 95%;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  background: rgba(255, 255, 255, 0.2);
+  font-size: 16px;
+  margin-bottom: 15px;
+  outline: none;
+  color: white;
+  text-align: center;
+}
 /* Input Focus Effect */
 input:focus, .user-role:focus {
   background: rgba(255, 255, 255, 0.3);
   transform: scale(1.02);
-  box-shadow: 0px 4px 15px rgba(255, 255, 255, 0.2);
 }
 
 /* Placeholder Styling */
 input::placeholder {
   color: rgba(255, 255, 255, 0.7);
-  font-style: italic;
   transition: color 0.3s ease-in-out;
 }
 
 /* Change Placeholder Color on Focus */
 input:focus::placeholder {
-  color: white;
+  color: rgb(7, 7, 7);
 }
 
 /* Input Hover Effect */
