--- a/asset-management-frontend/src/components/Dashboard.css
+++ b/asset-management-frontend/src/components/Dashboard.css
@@ -1,11 +1,13 @@
 /* Dashboard Container */
 .dashboard-container {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
-    color: white;
+    justify-content: center;
+    background: url("../assets/dashboard-bg.jpeg") no-repeat center center/cover;
+    position: relative;
+    z-index: 1;
 }
 
 /* Header */
