--- a/asset-management-frontend/src/components/Dashboard.css
+++ b/asset-management-frontend/src/components/Dashboard.css
@@ -5,8 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: url("../assets/dashboard-bg.jpeg") no-repeat center center/cover;
-    position: relative;
+    background: url("../assets/bg2.webp") no-repeat center center/cover;
     z-index: 1;
 }
 
