--- a/asset-management-frontend/src/components/Footer.css
+++ b/asset-management-frontend/src/components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background: black;
     color: white;
-    padding: 50px 100%;
+    padding: 50px 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,17 +27,30 @@
 }
 
 .footer-logo {
-    margin-left: -400px;
+    margin-top: 60px;
+    margin-left: -300px;
     height: 90px;
 }
-
-
+.footer-brand h2{
+    display: flex;
+    align-items: left;
+    margin-top: 100px;
+    gap: 15px;
+}
+.footer-brand p{
+    display: flex;
+    align-items: center;
+    margin-left: 70px;
+    margin-top: 30px;
+    gap: 15px;
+}
 /* Footer Info - Now placed under the logo */
 .footer-info {
     display: flex;
     flex-direction: row; /* Arrange columns in a row */
     justify-content: center;
     gap: 50px;
+    margin-right: -200px;
     margin-top: 20px;
 }
 
