--- a/asset-management-frontend/src/pages/ViewCommonAssets.css
+++ b/asset-management-frontend/src/pages/ViewCommonAssets.css
@@ -1,6 +1,6 @@
 .view-assets-container {
     padding: 40px;
-    background: linear-gradient(to right, #121212, #400000);
+    background: linear-gradient(to right, #ffffff, #ffffff); 
     color: white;
     min-height: 100vh;
   }
