--- a/asset-management-frontend/src/components/Dashboard.css
+++ b/asset-management-frontend/src/components/Dashboard.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(to right, #ffffff, #ffffff); /* Black to Dark Red Gradient */
+    background: linear-gradient(to right, #121212, #400000); /* Black to Dark Red Gradient */
     background-attachment: fixed;
     z-index: 1;
 }
@@ -90,7 +90,7 @@ nav ul li a:hover {
 .main-content {
     margin-top: 450px;
     text-align: center;
-    color: rgb(0, 0, 0); 
+    color: white; 
     margin-bottom: 80px;
 
 }
@@ -100,7 +100,7 @@ nav ul li a:hover {
     display: flex;
     align-items: center;
     gap: 10px;
-    background: linear-gradient(to right, #831c25, #c62828); /* Gradient red button */
+    background: linear-gradient(to right, #d4737b, #c62828); /* Gradient red button */
     border: none;
     padding: 12px 20px;
     font-size: 18px;
@@ -112,7 +112,7 @@ nav ul li a:hover {
 }
 
 .add-asset-button:hover {
-    background: linear-gradient(to right, #c62828, #831c25);
+    background: linear-gradient(to right, #b40505, #b71c1c);
 }
 
 .add-asset-button .icon {
@@ -147,7 +147,7 @@ nav ul li a:hover {
 .dashboard-card h3 {
     font-size: 18px;
     margin-bottom: 10px;
-    color: rgb(0, 0, 0);
+    color: white;
 }
 
 .dashboard-card p {
