--- a/asset-management-frontend/src/pages/AddAssetDetailsForm.css
+++ b/asset-management-frontend/src/pages/AddAssetDetailsForm.css
@@ -1,6 +1,6 @@
 .unique-details-form {
     min-height: 100vh;
-    background: linear-gradient(to right, #ffffff, #ffffff); 
+    background: linear-gradient(to right, #121212, #400000);
     color: white;
     display: flex;
     flex-direction: column;
