--- a/asset-management-frontend/src/pages/AssetDetailView.css
+++ b/asset-management-frontend/src/pages/AssetDetailView.css
@@ -1,6 +1,6 @@
 .asset-details-container {
     padding: 40px;
-    background: linear-gradient(to right, #ffffff, #ffffff); 
+    background: linear-gradient(to right, #121212, #400000);
     color: white;
     min-height: 100vh;
     font-family: Arial, sans-serif;
