--- a/asset-management-frontend/src/components/Dashboard.css
+++ b/asset-management-frontend/src/components/Dashboard.css
@@ -112,7 +112,7 @@ nav ul li a:hover {
 }
 
 .add-asset-button:hover {
-    background: linear-gradient(to right, #b40505, #b71c1c);
+    background: linear-gradient(to right, #c62828, #d4737b);
 }
 
 .add-asset-button .icon {
